--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,14 @@
         color: rgba(0, 0, 0, 0.5);
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5RQBNQSN4H"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-5RQBNQSN4H');
+    </script>
   </head>
   <body>
     <br />
