--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         levar mais tempo para se desenvolver e a fermentação demorará mais.
       </p>
       <p>
-        Uma massa <strong>more mais hidratada</strong> significa que você terá
+        Uma massa <strong>mais hidratada</strong> significa que você terá
         uma massa mais pegajosa, tornando-a mais difícil de moldar. Os
         ingredientes serão incorporados mais facilmente e o maior ponto de
         atenção deve ser o tempo de fermentação.
