--- a/public/index.html
+++ b/public/index.html
@@ -195,8 +195,8 @@
         ingredientes serão incorporados mais facilmente e o maior ponto de
         atenção deve ser o tempo de fermentação.
         <br />
-        Quanto mais água seu pão tiver, mais rápido ele fermentará, então tome
-        cuidado não fermentar demais o pão.
+        Quanto mais água seu pão tiver, mais rápido ele fermentará. Então tome
+        cuidado para não fermentar demais o pão.
       </p>
     </div>
     <script>
