--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora de hidratação do pão - Fermentação natural</title>
+    <title>Calculadora de hidratação de pão</title>
     <style>
       body {
         background-color: #eba83a;
@@ -104,22 +104,46 @@
       #resetSpan:hover {
         color: rgba(0, 0, 0, 0.5);
       }
+
+      .contato {
+        font-size: 14px;
+      }
+
+      ul {
+        font-size: 18px;
+        font-family: monospace;
+        list-style-type: none;
+        line-height: 1.5rem;
+        padding-inline-start: 0px;
+        max-width: 500px;
+      }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5RQBNQSN4H"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5RQBNQSN4H"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-5RQBNQSN4H');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-5RQBNQSN4H");
     </script>
   </head>
   <body>
     <br />
     <div class="container">
-      <h1>🍞 <br />Calculadora de hidratação de pão de fermentação natural</h1>
+      <h1>
+        🍞 <br />Calculadora de hidratação <br />pão de fermentação natural
+        <br />(massa azeda)
+      </h1>
 
-      <h2>Calcule aqui a hidratação do seu pão</h2>
+      <h2>
+        Use a nossa calculadora para saber qual será a porcentagem de hidratação
+        final do seu pão
+      </h2>
 
       <br />
 
@@ -181,15 +205,99 @@
         levar mais tempo para se desenvolver e a fermentação demorará mais.
       </p>
       <p>
-        Uma massa <strong>mais hidratada</strong> significa que você terá
-        uma massa mais pegajosa, tornando-a mais difícil de moldar. Os
-        ingredientes serão incorporados mais facilmente e o maior ponto de
-        atenção deve ser o tempo de fermentação.
+        Uma massa <strong>mais hidratada</strong> significa que você terá uma
+        massa mais pegajosa, tornando-a mais difícil de moldar. Os ingredientes
+        serão incorporados mais facilmente e o maior ponto de atenção deve ser o
+        tempo de fermentação.
         <br />
         Quanto mais água seu pão tiver, mais rápido ele fermentará. Então tome
         cuidado para não fermentar demais o pão.
       </p>
+
+      <p>
+        Se você está começando, o ideal é sempre começar por pães com
+        hidratações mais baixas, como 55-65%. Depois, vá aumentando a hidratação
+        e experimentando.
+      </p>
+
+      <p>•</p>
+      <p>
+        <strong>Receita de pão branco tradicional</strong>
+      </p>
+
+      <ul>
+        <li>500 g de farinha de trigo</li>
+        <li>8 g de sal</li>
+        <li>350 ml de água morna</li>
+        <li>150 g de isca de massa azeda</li>
+      </ul>
+
+      <p>
+        <strong>Isca de massa azeda</strong>: Misture 1/2 colher de sopa do
+        levain com 75 g de farinha e 75 g de água morna (30-35 °C) em uma
+        tigera. Cubra e deixe fermentar durante a noite.
+      </p>
+      <ul>
+        <li>
+          1. Misture a farinha e o sal em uma tigela média. Essa é a mistura
+          seca.
+        </li>
+        <li>
+          2. Coloque a água e a isca de massa azeda em uma tigela grande.
+          Misture até uniformizar. Essa é a mistura líquida.
+        </li>
+        <li>
+          3. Adicione a mistura seca à líquida. Misture bem todos os
+          ingredientes com uma colher de pau e depois com as mãos, até dar uma
+          liga e formar uma massa.
+        </li>
+        <li>
+          4. Cubra com a tigela da mistura seca e deixe descansar por 10
+          minutos.
+        </li>
+        <li>
+          5. Mantendo a massa na tigela, puxe uma porção da lateral e pressione
+          no meio. Gire um pouco a tigela e repita o processo com outra porção
+          de massa. Repita mais 8 vezes. O processo todo deve levar cerca de 10
+          segundos. A massa começará a oferecer resistência.
+        </li>
+        <li>6. Cubra novamente e deixe descansar por 10 minutos.</li>
+        <li>
+          7. Repita os passos 5 e 6 duas vezes, e finalize com o 5. Cubra a
+          tigela e deixe crescer por 1 hora.
+        </li>
+        <li>
+          8. Enfarinhe levemente uma superfície de trabalho limpa e coloque a
+          massa.
+        </li>
+        <li>9. Forme uma bola lisa e achatada.</li>
+        <li>
+          10. Forre uma cestinha de crescimento ou um escorredor de macarrão com
+          linho ou um pano de prato limpo. Polvilhe bastante farinha e coloque
+          massa dentro.
+        </li>
+        <li>11. Polvilhe a massa com farinha.</li>
+        <li>12. Deixe crescer até dobrar de tamanho 3-6 horas.</li>
+        <li>
+          13. Cerca de 20 minutos antes de assar, preaqueça o forno a 250 °C.
+          Coloque uma assadeira na parte inferior para aquecer.
+        </li>
+        <li>14. Quando a massa dobrar de tamanho, passe-a para a assadeira.</li>
+        <li>15. Faça incisões na parte de cima do pão com a lâmina.</li>
+        <li>16. Assse por 30 minutos ou até dourar bem.</li>
+      </ul>
+
+      <p>
+        Se tiver assado, ponha-o na grade para esfriar. Para saber se o pão está
+        assado, vire-o e bata no fundo, deve soar oco. Se não estiver pronto,
+        recoloque-o no forno por alguns minutos.
+      </p>
+
+      <p><i>Receita de Emmanuel Hadjiandreou</i></p>
+      <br />
+      <p class="contato">Contato: oi@calculadoradepao.com.br</p>
     </div>
+
     <script>
       let flourInput = document.getElementById("input1Flour");
       let waterInput = document.getElementById("input2Water");
