Added favicon files

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de hidratação de pão</title>
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" >
     <style>
       body {
         background-color: #eba83a;
